--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 NODE_ENV=production
 PORT=8011
-MONGODB_URI="mongodb://localhost:27017/afrahna"
+MONGODB_URI="mongodb+srv://feadmhmd770:fayad123456789@cluster0.nimgdcy.mongodb.net/afrahna"
 JWT_SECRET="bamba"
