--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
 		"joi": "^17.13.3",
 		"jsonwebtoken": "^9.0.2",
 		"lodash": "^4.17.21",
-		"mongoose": "^8.14.1"
+		"mongoose": "^8.14.1",
+		"node-cron": "^4.0.7"
 	},
 	"devDependencies": {
 		"nodemon": "^3.1.10"
