--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"jsonwebtoken": "^9.0.2",
 		"lodash": "^4.17.21",
 		"mongoose": "^8.14.1",
+		"morgan": "^1.10.0",
 		"multer": "^1.4.4",
 		"multer-gridfs-storage": "^5.0.2",
 		"node-cron": "^4.0.7"
