--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
 		"morgan": "^1.10.0",
 		"multer": "^1.4.4",
 		"multer-gridfs-storage": "^5.0.2",
-		"node-cron": "^4.0.7"
+		"node-cron": "^4.0.7",
+		"twilio": "^5.8.0"
 	},
 	"devDependencies": {
 		"@types/multer-gridfs-storage": "^4.0.8",
