--- a/.env.production
+++ b/.env.production
@@ -2,3 +2,6 @@ NODE_ENV=production
 PORT=8011
 MONGODB_URI="mongodb+srv://feadmhmd770:fayad123456789@cluster0.nimgdcy.mongodb.net/afrahna"
 JWT_SECRET="bamba"
+MESSAGING_SERVICE_SID="MGad57a7e34a377a78ba3dbde1cdd38ad1"
+ACCOUNT_SID="ACc6b7aa3436104f705b88efaa0520be30"
+AUTH_TOKEN="3a172b0b05a1a883434c5892356075c5"
