--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"multer": "^1.4.4",
 		"multer-gridfs-storage": "^5.0.2",
 		"node-cron": "^4.0.7",
+		"streamifier": "^0.1.1",
 		"twilio": "^5.8.0"
 	},
 	"devDependencies": {
