--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 NODE_ENV=development
 PORT=8010
-MONGODB_URI="mongodb://localhost:27017/afrahna"
-# MONGODB_URI="mongodb+srv://feadmhmd770:fayad123456789@cluster0.nimgdcy.mongodb.net/afrahna"
+# MONGODB_URI="mongodb://localhost:27017/afrahna"
+MONGODB_URI="mongodb+srv://feadmhmd770:fayad123456789@cluster0.nimgdcy.mongodb.net/afrahna"
 JWT_SECRET="bamba"
 NODE_MESSAGING_SERVICE_SID=MGad57a7e34a377a78ba3dbde1cdd38ad1
 NODE_ACCOUNT_SID=ACc6b7aa3436104f705b88efaa0520be30
